--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jdk.version>1.8</jdk.version>
     <graal.version>1.1.0</graal.version>
+    <graal-api.version>1.1.1</graal-api.version>
+    <logback.version>1.1.3</logback.version>
+    <junit.version>3.8.1</junit.version>
+    <guava.version>21.0</guava.version>
   </properties>
 
   <dependencies>
@@ -55,18 +59,24 @@
     <dependency>
 	  <groupId>ch.qos.logback</groupId>
 	  <artifactId>logback-classic</artifactId>
-	  <version>1.1.3</version>
+	  <version>${logback.version}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>${junit-version}</version>
       <scope>test</scope>
     </dependency>
       <dependency>
           <groupId>fr.lirmm.graphik</groupId>
           <artifactId>graal-api</artifactId>
-          <version>1.1.1</version>
+          <version>${graal-api.version}</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>${guava.version}</version>
       </dependency>
   </dependencies>
 
