--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
 .gitignore
-.idea/
+.idea
 dependency-reduced-pom.xml
-src/test/
 target/
 getting-started.iml
