--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <graal.version>1.1.0</graal.version>
     <graal-api.version>1.1.1</graal-api.version>
     <logback.version>1.1.3</logback.version>
-    <junit.version>3.8.1</junit.version>
+    <junit.version>4.12</junit.version>
     <guava.version>21.0</guava.version>
   </properties>
 
@@ -77,6 +77,16 @@
           <groupId>com.google.guava</groupId>
           <artifactId>guava</artifactId>
           <version>${guava.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+      </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
       </dependency>
   </dependencies>
 
