added Hyper-Tree Bag. class

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <logback.version>1.1.3</logback.version>
     <junit.version>4.12</junit.version>
     <guava.version>21.0</guava.version>
+    <blueprints-core.version>2.6.0</blueprints-core.version>
   </properties>
 
   <dependencies>
@@ -88,6 +89,13 @@
           <artifactId>junit</artifactId>
           <version>4.12</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/com.tinkerpop.blueprints/blueprints-core -->
+      <dependency>
+          <groupId>com.tinkerpop.blueprints</groupId>
+          <artifactId>blueprints-core</artifactId>
+          <version>2.6.0</version>
+      </dependency>
+
   </dependencies>
 
   <build>
@@ -116,9 +124,9 @@
 	    </goals>
 	    <configuration>
 	      <transformers>
-		<!-- add Main-Class to manifest file -->
+		        <!-- add Main-Class to manifest file -->
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-		  <mainClass>fr.lirmm.graphik.graal.examples.Example0</mainClass>
+		  <mainClass>uk.ac.bbk.dcs.types.TypesExample</mainClass>
 		</transformer>
 	      </transformers>
 	    </configuration>
